# termija

./: CMakeLists.txt  README.md  termija.conf
res/shaders/: back.fs  base.vs  post.fs  text.fs
src/: .rope.cpp.un~  CMakeLists.txt  config.cpp  drawing.cpp  pane.cpp  rope.cpp  rope.h  termija.cpp  termija.h  widget.h
src/widgets/: bar.cpp  box.cpp  list.cpp  popup.cpp  scrollbar.cpp  text.cpp  textbox.cpp
tests/: CMakeLists.txt  pane_tests.cpp  rope_tests.cpp
